--- a/client/src/assets/custom.scss
+++ b/client/src/assets/custom.scss
@@ -23,3 +23,20 @@
   height: 20rem;
   object-fit: cover;
 }
+
+//CKEditor5 Setting
+.ck-editor__editable {
+  max-height: 80rem;
+  min-height: 20rem;
+  min-width: 100%;
+}
+.ck-editor__editable_inline {
+  max-height: 80rem;
+  min-height: 20rem;
+  min-width: 100%;
+}
+
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
